Se agrego imagen y parrafo al index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor reprehenderit libero magni minus necessitatibus neque. Quisquam provident itaque ratione eligendi inventore corrupti consequatur reprehenderit modi illum a autem, ad iure.</p>
-    
+    <main>
+        <img src="" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi tenetur illum ea magnam mollitia placeat, consequuntur voluptatem, natus suscipit accusamus repellat. Excepturi, ea alias deserunt fugit aperiam nobis libero soluta.</p>
+    </main>
 </body>
 </html>
