Se agregaron nuevos elementos css e index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <img src="" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi tenetur illum ea magnam mollitia placeat, consequuntur voluptatem, natus suscipit accusamus repellat. Excepturi, ea alias deserunt fugit aperiam nobis libero soluta.</p>
+        <h1>Prueba</h1>
     </main>
 </body>
 </html>
